src/objects/Door_Activity__c.object
<CustomObject>
    <description>Object used to track how many people come through the front door and why they are here.</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visitor_Type__c</fullName>
        <label>Visitor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child (0-11)</fullName>
                </value>
                <value>
                    <fullName>Youth (12-17)</fullName>
                </value>
                <value>
                    <fullName>Young Adult (18-25)</fullName>
                </value>
                <value>
                    <fullName>Adult (26+)</fullName>
                </value>
                <value>
                    <fullName>Trained Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X0__c</fullName>
        <defaultValue>0</defaultValue>
        <label>12am</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>10am</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>11am</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Door Activity</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Door Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>